--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-bootstrap-table-next": "^4.0.1",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.2",
+    "react-country-region-selector": "^3.0.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.5",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2"
